<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/itemMapView"
        android:icon="@drawable/map_location"
        android:title="@string/map_view"
        app:showAsAction="ifRoom"/>


    <item android:id="@+id/itemListView"
        android:icon="@drawable/ic_menu"
        android:title="@string/list_view"
        app:showAsAction="ifRoom"/>

<!--    <item android:title="" />-->

    <item android:id="@+id/itemProfile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/itemMapType"
        android:icon="@drawable/ic_database"
        android:title="@string/map_type"
        app:showAsAction="ifRoom"/>

</menu>