<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <include
        android:id="@+id/appbar"
        layout="@layout/toolbar" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/appbar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="16dp">


        <mapitgis.jalnigamk.nirmal.view.FormSpinner
            android:id="@+id/spin_dist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical"
            app:mandatory="true"
            app:label="@string/district"/>

        <mapitgis.jalnigamk.nirmal.view.FormSpinner
            android:id="@+id/spin_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical"
            app:mandatory="true"
            app:label="@string/block"
            android:layout_marginTop="16dp"/>

        <mapitgis.jalnigamk.nirmal.view.FormSpinner
            android:id="@+id/spin_gp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical"
            app:mandatory="true"
            app:label="@string/gram_panchayat"
            android:layout_marginTop="16dp"/>

        <mapitgis.jalnigamk.nirmal.view.FormSpinner
            android:id="@+id/spin_village"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical"
            app:mandatory="true"
            app:label="@string/village"
            android:layout_marginTop="16dp"/>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_fetch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="16dp"
        android:text="Fetch Village Survey Data"
        android:textSize="14sp"/>



</androidx.constraintlayout.widget.ConstraintLayout>