<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="-5dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/dp20"
    app:cardElevation="@dimen/dp2"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dp10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:alpha="0.8"
                        android:text="@string/gram_panchayat"
                        android:textColor="@color/black"
                        android:textSize="10sp"
                        tools:ignore="SmallSp" />

                    <TextView
                        android:layout_width="10dp"
                        android:layout_height="wrap_content"
                        android:alpha="0.8"
                        android:gravity="center"
                        android:text="@string/colon"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/textViewGP"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alpha="0.8"
                        android:text="@string/app_name"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:alpha="0.8"
                        android:text="@string/village"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="10dp"
                        android:layout_height="wrap_content"
                        android:alpha="0.8"
                        android:gravity="center"
                        android:text="@string/colon"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/textViewVillage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alpha="0.9"
                        android:text="@string/app_name"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:alpha="0.8"
                        android:text="@string/remark"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="10dp"
                        android:layout_height="wrap_content"
                        android:alpha="0.8"
                        android:gravity="center"
                        android:text="@string/colon"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/textViewRemark"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textColor="@color/gray"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageViewPhoto"
                    android:layout_width="@dimen/dp25"
                    android:layout_height="@dimen/dp25"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_img" />

                <ImageView
                    android:id="@+id/imageViewDoc"
                    android:layout_width="@dimen/dp25"
                    android:layout_height="@dimen/dp25"
                    android:layout_marginTop="@dimen/dp10"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_pdf" />

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="-5dp"
            android:layout_marginEnd="-5dp">

            <Button
                android:id="@+id/buttonDiscard"
                style="@style/ButtonStyle"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginEnd="@dimen/dp5"
                android:layout_weight="1"
                android:padding="0dp"
                android:text="@string/discard"
                app:backgroundTint="@color/red1" />


            <Button
                android:id="@+id/buttonUpload"
                style="@style/ButtonStyle"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginStart="@dimen/dp5"
                android:layout_weight="1"
                android:padding="0dp"
                android:text="@string/upload"
                app:backgroundTint="@color/blue" />

        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>