<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="-5dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/dp20"
    app:cardElevation="@dimen/dp2"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dp10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:id="@+id/textViewComponent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/imageViewInfo"
                android:layout_width="@dimen/dp20"
                android:layout_height="@dimen/dp20"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_info" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewVillageGPBlock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/gray"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/textViewScheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.8"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="11sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewQCRemark"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:alpha="0.9"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/textViewPIU"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:background="@drawable/status_2"
                android:gravity="center"
                android:paddingStart="@dimen/dp5"
                android:paddingEnd="@dimen/dp5"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="-5dp"
            android:layout_marginEnd="-5dp">

            <Button
                android:id="@+id/buttonDiscard"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:text="@string/discard"
                android:padding="0dp"
                style="@style/ButtonStyle"
                app:backgroundTint="@color/red1"
                android:layout_marginEnd="@dimen/dp5"/>


            <Button
                android:id="@+id/buttonUpload"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:text="@string/upload"
                android:padding="0dp"
                style="@style/ButtonStyle"
                app:backgroundTint="@color/blue"
                android:layout_marginStart="@dimen/dp5"/>

        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>